--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
       type="module"
       src="https://unpkg.com/@splinetool/viewer@1.0.51/build/spline-viewer.js"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
