--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       </div>
 
       <div class="weather">
-        <div class="spline">
-          <spline-viewer
-            url="https://prod.spline.design/CQJDuklFNvXALztc/scene.splinecode"
-          ></spline-viewer>
-        </div>
+        <img src="images/clear.png" alt="" class="weather-icon"/>
         <h1 class="temp">22°C</h1>
         <h2 class="city">New York</h2>
         <div class="details">
